Don't count modifiers-changed events as being user gestures.

BUG=709765
TEST=as in bug

Review-Url: https://codereview.chromium.org/2874263002
Cr-Commit-Position: refs/heads/master@{#472876}

Former-commit-id: 42fad93f54e4ee681975517e2831614b5dbade05